--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,6 @@ hr {
 /*sec-4*/
 .sec-4 {
   background-color: #ececec;
-  
 }
 .sec-4 article {
   padding-top: 20px;
@@ -261,23 +260,20 @@ hr {
 .flexsec4 {
   background-color: var(--light);
   display: flex;
-justify-content: space-around;
-
+  justify-content: space-around;
 }
 
 .flex2 {
   display: flex;
-
 }
 .flexsec4 h5 {
   background-color: var(--color-orang);
   width: 50px;
-  
+
   padding: 32.5px 0;
   margin: auto 0px;
 }
 .flexsec4 h4 {
-
   font-size: x-large;
   font-weight: 400;
   background-color: #2d2d2d;
@@ -287,32 +283,97 @@ justify-content: space-around;
 }
 
 .flexsec4 small {
-    width: 150px;
+  width: 150px;
   padding: 20px 0px;
   text-align: center;
   margin: auto 0px;
 }
 
-.flexsec4 a{
- 
+.sec-4 P {
+  color: var(--text-color);
+}
+
+.flexsec4 a {
   background-color: #2d2d2d;
- text-decoration: none;
- width: 150px;
+  text-decoration: none;
+  width: 150px;
   padding: 30.5px 10px;
   margin: auto 0px;
   color: var(--light);
 }
-.flexsec4 img{
+.flexsec4 img {
   height: 50px;
   margin: auto;
 }
 @media (max-width: 991.5px) {
-  
-  .flexsec4{
+  .flexsec4 {
     flex-wrap: wrap;
   }
 }
 /*finish sec-4*/
+
+/* sec-5*/
+.sec-5 {
+  background: url("../images/Contact-bg.jpg") center center/cover no-repeat;
+  color: var(--light);
+}
+
+.sec-5 article {
+  padding-top: 30px;
+
+  text-align: center;
+}
+/*finish sec-5*/
+
+/*sec-6*/
+.sec-6 {
+  background-color: var(--dark);
+  padding-top: 20px;
+}
+
+form {
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+}
+form input{
+  margin-bottom: 10px;
+  width: 350PX;
+  height: 30px;
+  padding: 10px;
+ 
+}
+ #message{
+  height: 150px ;
+}
+form button{
+  margin-bottom: 10px;
+  width: 350PX;
+  height: 30px;
+  background-color: var(--color-orang);
+}
+.sec-6 article{
+  width: 360px;
+  color: var(--light);
+}
+.sec-6 h2{
+  color: var(--color-orang);
+  padding-bottom:10px ;
+}
+.sec-6 i{
+  border: none;
+  margin: auto 0;
+  padding-right: 10px;
+}
+.sec-6 .flex3{
+  display: flex;
+  justify-content:safe;
+  
+}
+.flex3 img{
+  padding-right:15px ;
+}
+/*finish sec-6*/
 
 @media (min-width: 576px) {
 }
@@ -333,7 +394,9 @@ justify-content: space-around;
       height: 20%;
       width: 72.5%;
     }
-    .flexsec4{
+    .flexsec3 {
+      justify-content: center;
+      display: flex;
       flex-wrap: wrap;
     }
   }
@@ -391,8 +454,16 @@ justify-content: space-around;
     margin: auto 10rem;
   }
 
-
   .sec-4 article {
+    margin: auto 10rem;
+  }
+  .sec-5 article {
+    margin: auto 10rem;
+  }
+
+  .flexsec6 {
+    display: flex;
+    justify-content: space-around;
     margin: auto 10rem;
   }
 }
